# swg-rs

./: .gitignore  Cargo.toml  deny.toml  devenv.nix  flake.nix  smash_03.compressed.tre  taplo.toml
.config/: hakari.toml
.nix/modules/flake-parts/: formatter.nix
crates/swg/: Cargo.toml  README.md
crates/swg/src/: main.rs
crates/swg/src/commands/: mod.rs
crates/swg/src/commands/tre/: diff.rs  extract.rs  merge.rs  mod.rs
crates/swg_iff/: Cargo.toml
crates/swg_iff/resources/: skills.iff
crates/swg_iff/src/: datatable.rs  error.rs  iff.rs  lib.rs  types.rs
crates/swg_iff/tests/: read.rs
crates/swg_stf/: Cargo.toml  README.md
crates/swg_stf/resources/: single_entry.stf
crates/swg_stf/src/: error.rs  lib.rs  read.rs  serde.rs  types.rs
crates/swg_stf/tests/: read.rs
crates/swg_tre/: Cargo.toml  README.md
crates/swg_tre/benches/: tre.rs
crates/swg_tre/resources/: .gitignore  double_attribute.tre  input.tre  small.tre  smash_01.tre  smash_02.tre
crates/swg_tre/resources/double_attribute/datatables/creation/: attribute_limits.iff  profession_mods.iff  racial_mods.iff
crates/swg_tre/resources/smash_01/datatables/command/: command_table.iff
crates/swg_tre/resources/smash_01/object/tangible/wearables/armor/zam/: shared_armor_zam_wesell_chest_plate.iff
crates/swg_tre/resources/smash_02/datatables/crafting/: schematic_group.iff
crates/swg_tre/resources/smash_02/datatables/skill/: skills.iff
crates/swg_tre/resources/smash_02/misc/: object_template_crc_string_table.iff
crates/swg_tre/resources/smash_02/object/draft_schematic/weapon/: shared_blastglove.iff
crates/swg_tre/resources/smash_02/object/weapon/melee/special/: shared_blastglove.iff
crates/swg_tre/resources/smash_02/string/en/: cmd_d.stf  cmd_n.stf  weapon_detail.stf  weapon_name.stf
crates/swg_tre/src/: compression.rs  error.rs  lib.rs  read.rs  types.rs  write.rs
crates/swg_tre/tests/: read.rs  write.rs
crates/swg_workspace/: Cargo.toml
