[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"
repository = "https://github.com/Smash-Wars-Galaxies/swg-rs"
license = "AGPL-3.0-or-later"

[workspace.dependencies]
swg = { path = "crates/swg" }
swg_tre = { path = "crates/swg_tre" }
swg_workspace = { version = "0.1" }

[patch.crates-io.swg_workspace]
path = "crates/swg_workspace"

[workspace.metadata.crane]
name = "swg"
