[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"
repository = "https://github.com/Smash-Wars-Galaxies/swg-rs"
license = "AGPL-3.0-or-later"

[workspace.dependencies]
swg = { version = "0.1", path = "crates/swg" }
swg_tre = { version = "0.1", path = "crates/swg_tre" }
swg_workspace = { version = "0.1" }

[patch.crates-io.swg_workspace]
path = "crates/swg_workspace"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace.metadata.crane]
name = "swg"

[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.23.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc", "aarch64-apple-darwin", "x86_64-apple-darwin"]
# Enable GitHub's experimental artifact attestation feature
github-attestations = true