[package]
name = "swg"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
keywords = []
categories = ["command-line-utilities"]

publish = true

[dependencies]
better-panic = "0.3.0"
clap = { version = "4.5.19", features = ["derive"] }
miette = { version = "7.2.0", features = ["fancy"] }
swg_tre.workspace = true
swg_workspace.workspace = true
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
walkdir = "2.5.0"
