[package]
name = "swg"
version = "0.1.0"
description = "This tool serves to make interacting with data for Star Wars Galaxies files easier to automate"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
keywords = []
categories = ["command-line-utilities"]

publish = true

[dependencies]
better-panic = "0.3.0"
clap = { version = "4.5.19", features = ["derive"] }
clap-verbosity-flag = "2.2.2"
itertools = "0.13.0"
miette = { version = "7.2.0", features = ["fancy"] }
owo-colors = { version = "4.1.0", features = ["supports-colors"] }
similar = { version = "2.6.0", features = ["inline", "unicode"] }
swg_stf = { workspace = true, features = ["serde"] }
swg_tre.workspace = true
swg_workspace.workspace = true
tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
walkdir = "2.5.0"
