[package]
name = "swg_tre"
version = "0.1.0"
description = "A library for reading from and creating TRE files used by Star Wars Galaxies"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["tre", "swg"]
categories = ["compression", "game-development", "parser-implementations"]

publish = true
exclude = ["tests/**", "resources/**", "benches/**", "examples/**"]

[dependencies]
binrw = "0.14.0"
bon = "2.3.0"
byteorder = "1"
crc = "3.2.1"
flate2 = { version = "1.0.34", features = ["zlib"] }
indexmap = "2.6.0"
md-5 = "0.10.6"
miette = { version = "7.2.0", features = ["fancy"] }
swg_workspace.workspace = true
thiserror = "1.0.64"
tracing = { version = "0.1.40", features = ["log"] }

[dev-dependencies]
divan = "0.1.15"
pretty_assertions = "1.4.1"
tracing-test = { version = "0.2.5", features = ["no-env-filter"] }
walkdir = "2.5.0"

[[bench]]
name = "tre"
harness = false
